--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Wing-Kit Lee
 
 # Short bio or description (displayed in the header)
-description: Rearcher
+description: Researcher
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
