--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: wingkitlee0
   instagram:
-  linkedin:
+  linkedin: https://www.linkedin.com/in/wingkitlee/
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: jekyllrb
